fix product tag alignment

--- a/src/flows/flowComponents/contentToolbar/style.scss
+++ b/src/flows/flowComponents/contentToolbar/style.scss
@@ -24,7 +24,7 @@
 }
 
 .sticky-mobile-content-toolbar .active-filters {
-    padding: $mobile-page-spacing;
+    padding: 0 $mobile-page-spacing;
 }
 
 .filter-toggle {
